@@ -11,6 +11,7 @@ t/badlinks.html
 t/click_ok.t
 t/content_contains.t
 t/content_lacks.t
+t/fluffy.html
 t/followable_links.t
 t/follow_link_ok.t
 t/get_ok-parms.t
