@@ -1,0 +1,13 @@
+<html>
+    <head>
+        <title>Test Page</title>
+    </head>
+    <body>
+        This page has valid structure, but contains errors that HTML::Lint
+        categorizes as fluff.
+        <a href="goodlinks.html">good</a>
+        <a href="bad2.html">Test</a>
+        <img src="/foo.gif"> <!-- No height & width -->
+    </body>
+</html>
+
