@@ -4,6 +4,12 @@ WWW::Mechanize and Test::WWW::Mechanize do not use rt.cpan.org for
 bug tracking.  They are now being tracked via Google Code at
 http://code.google.com/p/www-mechanize/issues/list
 
+NEXT
+------------------------------------
+[FIXES]
+Custom lint objects don't get reset before they get used, making autolint
+with a custom lint object practically useless.
+https://github.com/petdance/test-www-mechanize/issues/25
 
 1.40    Fri Apr 13 15:14:39 CDT 2012
 ------------------------------------
